# gtetools

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md
genomic-fx/: Cargo.toml  LICENSE
genomic-fx/benches/: benches.rs
genomic-fx/src/: feature.rs  io_refflat.rs  lib.rs
genomic-fx/tests/: test_exon.rs  test_gene.rs  test_transcript.rs
genomic_fx/: Cargo.toml  README.md
genomic_fx/benches/: benches.rs
genomic_fx/src/: feature.rs  io_gff.rs  io_refflat.rs  lib.rs
genomic_fx/tests/: exon.rs  gene.rs  io_gff.rs  io_refflat.rs  test_gene.rs  transcript.rs
genomic_fx/tests/data/: mult_rows_no_cds.refFlat  single_gene.gtf  single_row_no_cds.refFlat
gnf/: Cargo.toml  LICENSE  README.md
gnf/benches/: benches.rs
gnf/src/: feature.rs  lib.rs  mod.rs  test.rs
gnf/src/io/: mod.rs  refflat.rs
gnf/tests/: test_exon.rs  test_transcript.rs
gte/: Cargo.toml  LICENSE  README.md
gte/benches/: benches.rs
gte/src/: io_gff.rs  io_refflat.rs  lib.rs  model.rs
gte/tests/: exon.rs  gene.rs  io_gff.rs  io_refflat.rs  transcript.rs
gte/tests/data/: mult_rows_mult_genes_with_cds.refFlat
src/: cli.rs  feature.rs  main.rs  utils.rs
src/tools/: convert_gtf2refflat.rs  gff_to_refflat.rs  mod.rs  stats.rs
