[package]
name = "gnftools"
version = "0.1.0"
authors = ["Wibowo Arindrarto <bow@bow.web.id>"]

[dependencies]
genomic_fx = { path = "genomic_fx", "version" = "~0.1.0" }

[dependencies.clap]
version = "~2.20.5"
default-features = false
features = ["suggestions", "wrap_help"]

[[bin]]
name = "gnftools"
path = "src/main.rs"

[workspace]
members = ["genomic_fx"]
