[package]
name = "gtetools"
version = "0.1.0"
authors = ["Wibowo Arindrarto <bow@bow.web.id>"]

[dependencies]
gte = { path = "gte", "version" = "~0.1.0" }

[dependencies.clap]
version = "~2.20.5"
default-features = false
features = ["suggestions", "wrap_help"]

[[bin]]
name = "gtetools"
path = "src/main.rs"

[workspace]
members = ["gte"]
